---
source: crates/parser/src/lib.rs
expression: "&parse.debug_tree()"
info:
  code: "\n      for x in xs where x > 0 |acc| {\n        acc + x\n      }\n    "
---
Root@0..67
  Whitespace@0..7 "\n      "
  ForExpression@7..67
    For@7..10 "for"
    Whitespace@10..11 " "
    ForPattern@11..13
      Identifier@11..12 "x"
      Whitespace@12..13 " "
    ForInExpression@13..19
      In@13..15 "in"
      Whitespace@15..16 " "
      VariableReference@16..19
        Identifier@16..18 "xs"
        Whitespace@18..19 " "
    ForWhereCondition@19..31
      Where@19..24 "where"
      Whitespace@24..25 " "
      InfixExpression@25..31
        VariableReference@25..27
          Identifier@25..26 "x"
          Whitespace@26..27 " "
        GreaterThan@27..28 ">"
        Whitespace@28..29 " "
        Number@29..31
          Number@29..30 "0"
          Whitespace@30..31 " "
    ForPipePattern@31..37
      Pipe@31..32 "|"
      VariableReference@32..35
        Identifier@32..35 "acc"
      Pipe@35..36 "|"
      Whitespace@36..37 " "
    ForBody@37..67
      BlockExpression@37..67
        LeftBrace@37..38 "{"
        Whitespace@38..47 "\n        "
        InfixExpression@47..61
          VariableReference@47..51
            Identifier@47..50 "acc"
            Whitespace@50..51 " "
          Plus@51..52 "+"
          Whitespace@52..53 " "
          VariableReference@53..61
            Identifier@53..54 "x"
            Whitespace@54..61 "\n      "
        RightBrace@61..62 "}"
        Whitespace@62..67 "\n    "
